offer refracted
