# cmd/api/docs/swagger.json
@@ -605,7 +605,7 @@
                     "Offers"
                 ],
                 "summary": "api for admin to add new offer",
-                "operationId": "AddOffer",
+                "operationId": "SaveOffer",
                 "parameters": [
                     {
                         "description": "input field",
@@ -631,6 +631,36 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "tags": [
+                    "Offers"
+                ],
+                "summary": "api for admin to delete offer",
+                "operationId": "SaveOffer",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Offer ID",
+                        "name": "offer_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully offer added",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
             }
         },
         "/admin/offers/": {
@@ -640,6 +670,20 @@
                 ],
                 "summary": "api for show all offers",
                 "operationId": "FindAllOffers",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page Number",
+                        "name": "page_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Count",
+                        "name": "count",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successfully got all offers",
@@ -662,7 +706,21 @@
                     "Offers"
                 ],
                 "summary": "api for admin to get all offers of categories",
-                "operationId": "FindAllOfferCategories",
+                "operationId": "FindAllCategoryOffers",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page Number",
+                        "name": "page_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Count",
+                        "name": "count",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successfully got all offer_category",
@@ -683,7 +741,7 @@
                     "Offers"
                 ],
                 "summary": "api for admin to add offer for category",
-                "operationId": "AddOfferCategory",
+                "operationId": "SaveCategoryOffer",
                 "parameters": [
                     {
                         "description": "input field",
@@ -709,6 +767,36 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "tags": [
+                    "Offers"
+                ],
+                "summary": "api for admin to remove offer from a category",
+                "operationId": "RemoveCategoryOffer",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Offer Category ID",
+                        "name": "offer_category_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully offer added for category",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
             }
         },
         "/admin/offers/category/replace": {
@@ -717,7 +805,7 @@
                     "Offers"
                 ],
                 "summary": "api for admin to add offer for category",
-                "operationId": "ReplaceOfferCategory",
+                "operationId": "ReplaceCategoryOffer",
                 "parameters": [
                     {
                         "description": "input field",
@@ -751,7 +839,21 @@
                     "Offers"
                 ],
                 "summary": "api for admin to get all offers of products",
-                "operationId": "GetOffersOfProducts",
+                "operationId": "FindAllProductsOffers",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page Number",
+                        "name": "page_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Count",
+                        "name": "count",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successfully got all offers_categories",
@@ -772,7 +874,7 @@
                     "Offers"
                 ],
                 "summary": "api for admin to replace a new offer on an existing offer for a product",
-                "operationId": "ReplaceOfferProduct",
+                "operationId": "ReplaceProductOffer",
                 "parameters": [
                     {
                         "description": "input field",
@@ -804,7 +906,7 @@
                     "Offers"
                 ],
                 "summary": "api for admin to add offer for product",
-                "operationId": "AddOfferProduct",
+                "operationId": "SaveProductOffer",
                 "parameters": [
                     {
                         "description": "input field",
@@ -838,7 +940,7 @@
                     "Offers"
                 ],
                 "summary": "api for admin to remove offer from product",
-                "operationId": "RemoveOfferProduct",
+                "operationId": "RemoveProductOffer",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1549,50 +1651,6 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "user can remove a signle productItem full quantity from cart",
-                "tags": [
-                    "User Cart"
-                ],
-                "summary": "api for remove a product from cart",
-                "operationId": "RemoveFromCart",
-                "parameters": [
-                    {
-                        "description": "Input Field",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.Cart"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully product item removed form cart",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to remove product item from cart",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
             }
         },
         "/carts/checkout/payment-select-page": {
@@ -1891,6 +1949,48 @@
                     },
                     "400": {
                         "description": "Failed to add product item into cart",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "user can remove a signle productItem full quantity from cart",
+                "tags": [
+                    "User Cart"
+                ],
+                "summary": "api for remove a product from cart",
+                "operationId": "RemoveFromCart",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product Item ID",
+                        "name": "product_item_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully product item removed form cart",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to remove product item from cart",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -2380,7 +2480,7 @@
                     "Wishlist"
                 ],
                 "summary": "api to add a productItem to wish list",
-                "operationId": "AddToWishList",
+                "operationId": "SaveToWishList",
                 "parameters": [
                     {
                         "description": "product_item_id",
@@ -2517,17 +2617,6 @@
                     "type": "boolean"
                 },
                 "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "request.Cart": {
-            "type": "object",
-            "required": [
-                "product_item_id"
-            ],
-            "properties": {
-                "product_item_id": {
                     "type": "integer"
                 }
             }
